--- a/wp-content/themes/baseAppLabo_v2/style.css
+++ b/wp-content/themes/baseAppLabo_v2/style.css
@@ -2,3 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+    .btn-primary {
+        @apply inline-block px-5 py-3 rounded-lg 
+        bg-indigo-500
+        hover:-translate-y-0.5 
+        focus:ring focus:ring-offset-2 focus:ring-opacity-50 text-white active:bg-blue-700 transform transition 
+        uppercase tracking-wider font-semibold;
+    }
+    .btn-secondary {
+        @apply inline-block px-5 py-3 rounded-lg 
+        bg-gray-300
+        hover:-translate-y-0.5 
+        focus:ring focus:ring-offset-2 focus:ring-opacity-50 active:bg-gray-700 transform transition 
+        uppercase tracking-wider text-gray-900 font-semibold;
+    }
+}
+
